# databricks-client

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  README.md  VERSIONING.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dotnet-build.yml  python-build.yml
examples/: README.md
examples/dotnet/Databricks.Examples.Console/: Databricks.Examples.Console.csproj  Program.cs  appsettings.Development.json
examples/dotnet/Databricks.Examples.ConsoleMinimal/: appsettings.Development.json
examples/dotnet/SoftSense.Examples.Console/: Program.cs  README.md  SoftSense.Examples.Console.csproj  appsettings.Development.json  appsettings.json
examples/dotnet/SoftSense.Examples.ConsoleMinimal/: Program.cs  SoftSense.Examples.ConsoleMinimal.csproj  appsettings.Development.json
examples/python/databricks-example-console/: README.md  pyproject.toml  requirements.txt
examples/python/databricks-example-console/src/databricks_example/: __init__.py  app.py
source/csharp/: .editorconfig  SoftSense.Databricks.Client.sln
source/csharp/AspireAppHost/: AppHost.cs  AspireAppHost.csproj  README.md  appsettings.Development.json  appsettings.json
source/csharp/Databricks.Examples.ConsoleMinimal/: Databricks.Examples.ConsoleMinimal.csproj  Program.cs
source/csharp/SoftSense.Databricks.Benchmarks/: Program.cs  QueryBenchmarks.cs  README.md  SoftSense.Databricks.Benchmarks.csproj
source/csharp/SoftSense.Databricks.Core/: SoftSense.Databricks.Core.csproj
source/csharp/SoftSense.Databricks.SqlClient/: SoftSense.Databricks.SqlClient.csproj  SqlWarehouseClient.cs
(+13 files in other folders)
